# QcRewrite

./: README.md  dune-project  quickchick.opam
Core/: .merlin  Core.v  dune  g_quickchick.mlg  quickChick.ml4  quickchick_plugin.mlpack
Show/: .merlin  dune
